@startuml

title __VIEW's Class Diagram__\n

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class Anmodning {
          # onCreate()
          + onBackPressed()
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          + onNavigationItemSelected()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class GivTilladelse {
          # onCreate()
          + onBackPressed()
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          + onNavigationItemSelected()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class Login {
          # onCreate()
          + onBackPressed()
          + onNavigationItemSelected()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class MineTilladelser {
          # onCreate()
          + onBackPressed()
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          + onNavigationItemSelected()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.view {
      class SendteAnmodninger {
          # onCreate()
          + onBackPressed()
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          + onNavigationItemSelected()
      }
    }
  }
  

  Anmodning -up-|> OnNavigationItemSelectedListener
  Anmodning -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  GivTilladelse -up-|> OnNavigationItemSelectedListener
  GivTilladelse -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  MainActivity -up-|> OnNavigationItemSelectedListener
  MainActivity -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  MineTilladelser -up-|> OnNavigationItemSelectedListener
  MineTilladelser -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  SendteAnmodninger -up-|> OnNavigationItemSelectedListener
  SendteAnmodninger -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
